<resources>
    <string name="app_name">Rapid Deploy Example</string>
    <string name="getuser">Get user</string>
    <string name="createuser">Create user</string>
    <string name="enter_userid">Enter userId</string>
    <string name="enter_description">Enter description</string>
    <string name="logout">Logout</string>
    <string name="set_description">Set description</string>
    <string name="development">Roam Development</string>
    <string name="geofence_events">Geofence Events</string>
    <string name="trip_events">Trip Events</string>
    <string name="activity_events">Location Events</string>
    <string name="events">Events</string>
    <string name="toggle_events">Toggle events</string>
    <string name="get_events">Get events &amp; listener</string>
    <string name="tracking">Tracking</string>
    <string name="high">Active</string>
    <string name="balanced">Balanced</string>
    <string name="batterysaver">Passive</string>
    <string name="custom">Custom</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="export_log">Export log</string>
    <string name="logs">Logs</string>
    <string name="location_log">Location log</string>
    <string name="application_log">Application log</string>
    <string name="log">Log</string>
    <string name="image">image</string>
    <string name="location">Location</string>
    <string name="current_location">Current Location</string>
    <string name="enter_accuracy">Enter accuracy</string>
    <string name="nearby_events">NearBy Events</string>
    <string name="trip">Trip</string>
    <string name="start_end_trip"><![CDATA[Start & End Trip]]></string>
    <string name="set_device_token">Set device token</string>
    <string name="get_device_token">Get device token</string>
    <string name="device_token">Device token</string>
    <string name="update_location">Update location</string>
    <string name="mapview">MapView</string>
    <string name="listview">ListView</string>
    <string name="fitness_tracking_options">Fitness tracking</string>
    <string name="distance_filter">Enter distance filter</string>
    <string name="subscribe_location">Subscribe location</string>
    <string name="listener">Subscribe</string>
    <string name="subscribe_events">Subscribe Events</string>
    <string name="events_listener">Events Listener</string>
    <string name="location_listener">Location Listener</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="other_location_listener">User\'s Location</string>
    <string name="my_locations">My locations</string>
    <string name="other_locations">Other locations</string>
    <string name="usemovinggeofence">UseGeofence</string>
    <string name="enter_geofenceradius">Enter stop duration</string>
    <string name="trip_summary">Trip summary</string>
    <string name="get_trip">Get trip</string>
    <string name="create_trip">Create trip</string>
    <string name="enter_tripid">Enter tripId</string>
    <string name="unsubscribetriplistener">UnsubscribeTripListener</string>
    <string name="subscribetriplistener">SubscribeTripListener</string>
    <string name="trip_status">Trip status</string>
    <string name="trip_listener">Trip listener</string>
    <string name="deletetrip">Delete trip</string>
    <string name="sync_trip">Sync trip</string>
    <string name="appstate">AppState</string>
    <string name="alwayson">AlwaysOn</string>
    <string name="foreground">Foreground</string>
    <string name="background">Background</string>
    <string name="setappstate">Set AppState</string>
    <string name="update_interval">Update interval</string>
    <string name="offline_tracking">Offline tracking</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="start_trip_and_tracking">Start Trip and Tracking</string>
    <string name="start_trip">Start trip</string>
    <string name="distance_interval_m">Distance interval(m)</string>
    <string name="time_interval_s">Time interval(s)</string>
    <string name="pub_sub_topic_name">pub/sub topic name</string>
    <string name="url">url</string>
    <string name="without_user">Login without user</string>
    <string name="with_user">Login with user</string>
    <string name="login">Login</string>
</resources>