<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlConnector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_view">

                <LinearLayout
                    android:id="@+id/llUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Spinner
                        android:id="@+id/spConnectionType"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0.7"
                        android:background="@drawable/bg_view" />

                    <EditText
                        android:id="@+id/etHostUrl"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.3"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center|start"
                        android:hint="@string/url"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPubSub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llUrl"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Spinner
                        android:id="@+id/spQos"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="0.7"
                        android:background="@drawable/bg_view" />

                    <EditText
                        android:id="@+id/etPubSubTopic"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0.3"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center|start"
                        android:hint="@string/pub_sub_topic_name"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <TableRow
                    android:id="@+id/tbConnector"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/llPubSub"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_enable"
                        android:text="Register"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnDeRegister"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_enable"
                        android:text="Deregister"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />
                </TableRow>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Custom MQTT Server"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlConnector">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_view">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <RadioButton
                        android:id="@+id/rbOption1"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:checked="false"
                        android:text="@string/high"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rbOption2"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:checked="false"
                        android:text="@string/balanced"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rbOption3"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:checked="false"
                        android:text="@string/batterysaver"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rbOption4"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="start"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="20dp"
                        android:checked="false"
                        android:text="@string/custom"
                        android:textSize="16sp" />
                </RadioGroup>


                <EditText
                    android:id="@+id/edtUpdateInterval"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/radioGroup"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="center|start"
                    android:hint="@string/time_interval_s"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtDistanceFilter"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_below="@+id/edtUpdateInterval"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="center|start"
                    android:hint="@string/distance_interval_m"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TableRow
                    android:id="@+id/tbTracking"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/edtDistanceFilter"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp">

                    <Button
                        android:id="@+id/btnStartTracking"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_enable"
                        android:text="@string/start_tracking"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnStopTracking"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_enable"
                        android:text="@string/stop_tracking"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />
                </TableRow>

            </RelativeLayout>

            <TextView
                android:id="@+id/txtTracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tracking"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>